app/_scss/_base.scss
t/**
 * Reset some basic elements
 */
body, h1, h2, h3, h4, h5, h6,
p, blockquote, pre, hr,
dl, dd, ol, ul, figure {
    margin: 0;
    padding: 0;
}

$darken: #f1eae0;

$font-slab: "brandon-grotesque";
$base-font: "brandon-grotesque",sans-serif;

* {
    box-sizing: border-box;
}

/**
 * Basic styling
 */

body {
    height: 100vh;
    width: 300vw;
    font-family: $base-font;
    font-size: $base-font-size;
    line-height: $base-line-height;
    font-weight: 100;
    color: $text-color;
    @extend %background-color;
    -webkit-text-size-adjust: 100%;
    overflow-y: hidden;
    font-size: 0;
    user-select: none;
}

.view {
  position: relative;
  width: 100vw;
  height: 100vh;
  display: inline-block;
  float: left;
  overflow: hidden;
}

/**
 * Set `margin-bottom` to maintain vertical rhythm
 */
h2, h3, h4, h5, h6,
p, blockquote, pre,
ul, ol, dl, figure,
%vertical-rhythm {
    margin-bottom: $spacing-unit / 3;
}

/**
 * Images
 */


p {
    font-family: $base-font;
    font-size: $base-font-size * 1.2;
    font-style: normal;
    font-weight: 100;
}

a {
    font-family: $font-slab;
    font-weight: 400;
}

.hover {
  position: relative; 
  transition-property: transform, text-shadow;
  transition-duration: .2s;
  transition-timing-function: linear;       
  text-decoration: none;
  font-size: $base-font-size * 1.5;
  color: white;
  &:hover {
  text-shadow: 
    #0E3156 1px 1px,
    #0E3156 2px 2px,
    #0E3156 3px 3px,
    0 0 5px rgba(0,0,0,.1),
    0 1px 3px rgba(0,0,0,.25),
    0 3px 5px rgba(0,0,0,.2),
    0 5px 10px rgba(0,0,0,.15),
    0 10px 10px rgba(0,0,0,.1),
    0 20px 20px rgba(0,0,0,.1);
  transform: translate3d(-3px, -3px, 0) !important;
  text-decoration: none;
  color: #f1eae0;
  }
  &:visited {
    color: white;
  }
}

#works.nav.hover {
    opacity: .4;
    &:hover {
        opacity: 1;
    }
}

/**
 * Figures
 */
figure > img {
    display: block;
}

figcaption {
    font-size: $small-font-size;
}


/**
 * Lists
 */

li {
    > ul,
    > ol {
         margin-bottom: 0;
    }
}



/**
 * Headings
 */
h1, h2, h3, h4, h5, h6 {
    font-weight: 300;
}



/**
 * Links
 */
a {
    color: white;
    text-decoration: none;

    &:visited {
        color: white;
    }

    &:hover {
        color: white;
        text-decoration: none;
    }
}



/**
 * Blockquotes
 */
blockquote, article blockquote p {

    font-size: $base-font-size * 2;
    font-weight: 100;
    text-align: center;

    > :last-child {
        margin-bottom: 0;
    }
}



/**
 * Code formatting
 */
pre,
code {
    font-size: 15px;
    border: 1px solid $grey-color-light;
    border-radius: 3px;
    background-color: #eef;
}

code {
    padding: 1px 5px;
}

pre {
    padding: 8px 12px;
    overflow-x: scroll;

    > code {
        border: 0;
        padding-right: 0;
        padding-left: 0;
    }
}



/**
 * Wrapper
 */
.wrapper {
    width: 100vw;
    // max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit} * 2));
    // max-width:         calc(#{$content-width} - (#{$spacing-unit} * 2));
    // margin-right: auto;
    // margin-left: auto;
    // padding-right: $spacing-unit;
    // padding-left: $spacing-unit;
    @extend %clearfix;

    @include media-query($on-laptop) {
        width: 100vw;
        // max-width: -webkit-calc(#{$content-width} - (#{$spacing-unit}));
        // max-width:         calc(#{$content-width} - (#{$spacing-unit}));
        // padding-right: $spacing-unit / 2;
        // padding-left: $spacing-unit / 2;
    }
}



/**
 * Clearfix
 */
%clearfix {

    &:after {
        content: "";
        display: table;
        clear: both;
    }
}



/**
 * Icons
 */
.icon {

    > svg {
        display: inline-block;
        width: 16px;
        height: 16px;
        vertical-align: middle;

        path {
            fill: $grey-color;
        }
    }
}

